--- a/src/components/Header/Alt.css
+++ b/src/components/Header/Alt.css
@@ -1,10 +1,10 @@
-.line {
-    width: 100%;
-    height: 70px;
-    background-color: rgb(123, 224, 255);
+.links {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
 }
 
+.linkColor {
+    color: wheat;
+}
