--- a/src/components/Header/Alt.css
+++ b/src/components/Header/Alt.css
@@ -1,4 +1,5 @@
 .links {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -7,4 +8,5 @@
 
 .linkColor {
     color: wheat;
+    font-size: 18px; 
 }
