--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,12 @@
-.line {
+.links {
     width: 100%;
-    height: 70px;
-    background-color: rgb(123, 224, 255);
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
 }
 
+.linkColor {
+    color: wheat;
+    font-size: 18px; 
+}
