--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -2,4 +2,6 @@
     width: 100%;
     height: 100px;
     background: red url(anime.jpg) no-repeat 50%;
+    position: relative;
+    text-align: center;
 }
