--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,7 +1,13 @@
 .back {
-    width: 100%;
-    height: 100px;
-    background: red url(anime.jpg) no-repeat 50%;
-    position: relative;
-    text-align: center;
+  background: url(anime.jpg);
+  background-size: cover;
+  width: 1536px;
+  height: 695px;
+  position: relative;
+}
+
+.bottom-left {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
 }
