--- a/src/components/App.css
+++ b/src/components/App.css
@@ -38,11 +38,13 @@ img{
 }
 
 .progessBar{
-  height: 1rem;
+  height: 1.8rem;
   width: 0%;
   background-color: rgb(68, 212, 231);
   color: white;
-  padding:2px
+  padding:2px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .file-upload{
@@ -56,9 +58,7 @@ img{
   font-size: 1rem;
 }
 
-input , div , button{
-  margin-top: 2rem;
-}
+
 
 .upbutton{
    width: 5rem;
