--- a/src/components/App.css
+++ b/src/components/App.css
@@ -20,12 +20,6 @@
     flex-direction: column;
 }
 
-
-
-
-
-
-
 .App {
     margin: 2rem auto;
     max-width: 800px;
@@ -58,8 +52,6 @@ img{
   font-size: 1rem;
 }
 
-
-
 .upbutton{
    width: 5rem;
    padding: .5rem;
@@ -67,4 +59,11 @@ img{
    color: aliceblue;
    font-size: 1rem;
    cursor: pointer;
+}
+
+.middle{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
